* Fixed Battlepass not showing all rewards locked * Fixed Spellfencer not working
Former-commit-id: cd2b2d08d8c12564e9a6eec27ab88febb87e5c24

--- a/content/dota_addons/dota_imba/panorama/styles/custom_game/imba_imr.css
+++ b/content/dota_addons/dota_imba/panorama/styles/custom_game/imba_imr.css
@@ -85,7 +85,7 @@
 
 #BattlepassInfoContainer {
 	width: 100%;
-	height: 60%;
+	height: fit-children;
 	flow-children: down;
 	padding: 1% 1% 1% 1%;
 }
